kanc/src/tests/sample_code/should_fail/single_file/type_check/call_arg_labeledness_mismatch/unlabeled_type_labeled_args.k
type Nat {
    .o: Nat,
    .s(n: Nat): Nat,
}

type List(T: Type) {
    .nil(~Item: Type): List(Item),
    .cons(~Item: Type, ~car: Item, ~cdr: List(Item)): List(Item),
}

let right = List(Nat);
let wrong = List(Item: Nat);
